@@ -22,8 +22,8 @@ ext {
 ensime {
     targetFile = "${project.buildDir}/ensime_file"
     cacheDir = "${project.buildDir}/ensime_cache"
-    javaHome = "/Library/Java/JavaVirtualMachines/jdk1.8.0_25.jdk/Contents/Home"
-    javaFlags = ["-Xms1024m", "-Xmx1024m", "-XX:MaxPermSize=256m"]
+    javaHome = "${System.env.JAVA_HOME}"
+    javaFlags = ["-Xms1024m", "-Xmx1024m"]
     referenceSourceRoots = [javaHome + "/src.zip"]
     scalaVersion = scalaLibraryVersion
     compilerArgs = ["-feature", "-deprecation"]
